update 'Syntax. Primitive types in patterns.md' anki card